<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.noteasymusic.MainActivity">

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:tabIndicatorHeight="@dimen/tab_indicator_height"
        app:tabSelectedTextColor="@android:color/white"
        app:tabTextColor="@android:color/secondary_text_dark" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/now_playing"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_bar_height"
        android:background="@android:color/white"
        android:padding="@dimen/bottom_bar_padding">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/song_cover"
            android:scaleType="centerInside"
            android:src="@drawable/coldplay_cover" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/bottom_bar_padding"
            android:paddingRight="@dimen/bottom_bar_padding"
            android:text="@string/now_playing_info"
            android:textSize="@dimen/playing_info_bottom_size" />

        <ImageView
            style="@style/MusicControlImage"
            android:layout_marginLeft="@dimen/bottom_bar_padding"
            android:layout_marginStart="@dimen/bottom_bar_padding"
            android:contentDescription="@string/skip_previous_icon"
            android:src="@drawable/skip_previous" />

        <ImageView
            android:id="@+id/play_pause_image"
            style="@style/MusicControlImage"
            android:layout_marginLeft="@dimen/bottom_bar_padding"
            android:layout_marginRight="@dimen/bottom_bar_padding"
            android:contentDescription="@string/play_pause_button"
            android:src="@drawable/play" />

        <ImageView
            style="@style/MusicControlImage"
            android:layout_marginEnd="@dimen/bottom_bar_padding"
            android:layout_marginRight="@dimen/bottom_bar_padding"
            android:contentDescription="@string/skip_next_icon"
            android:src="@drawable/skip_next" />
    </LinearLayout>
</LinearLayout>
