<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/viewgroups_padding">

    <ImageView
        android:id="@+id/song_cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/song_cover"
        android:scaleType="centerCrop"
        tools:src="@drawable/coldplay_cover" />

    <TextView
        android:id="@+id/song_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/song_cover"
        android:gravity="center_vertical"
        android:padding="@dimen/online_song_padding"
        android:textSize="@dimen/online_song_info_size"
        tools:text="@string/now_playing_info" />

    <TextView
        android:id="@+id/song_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/song_cover"
        android:gravity="center"
        android:padding="@dimen/online_song_padding"
        android:textSize="@dimen/online_song_info_size"
        tools:text="@string/song_price" />
</RelativeLayout>
