<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.noteasymusic.OnlineActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/online_purchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/viewgroups_padding">

            <ImageView
                android:id="@+id/song_cover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/song_cover"
                android:scaleType="centerCrop"
                android:src="@drawable/coldplay_cover" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/song_cover"
                android:gravity="center_vertical"
                android:padding="@dimen/online_song_padding"
                android:text="@string/now_playing_info"
                android:textSize="@dimen/online_song_info_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/song_cover"
                android:gravity="center"
                android:padding="@dimen/online_song_padding"
                android:text="@string/song_price"
                android:textSize="@dimen/online_song_info_size" />
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@id/now_playing"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_bar_height"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:padding="@dimen/bottom_bar_padding">

        <ImageView
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/song_cover"
            android:scaleType="centerInside"
            android:src="@drawable/coldplay_cover" />

        <TextView
            android:layout_width="@dimen/zero_dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/bottom_bar_padding"
            android:paddingRight="@dimen/bottom_bar_padding"
            android:text="@string/now_playing_info"
            android:textSize="@dimen/playing_info_bottom_size" />

        <ImageView
            style="@style/MusicControlImage"
            android:layout_marginLeft="@dimen/bottom_bar_padding"
            android:layout_marginStart="@dimen/bottom_bar_padding"
            android:contentDescription="@string/skip_previous_icon"
            android:src="@drawable/skip_previous" />

        <ImageView
            android:id="@id/play_pause_image"
            style="@style/MusicControlImage"
            android:layout_marginLeft="@dimen/bottom_bar_padding"
            android:layout_marginRight="@dimen/bottom_bar_padding"
            android:contentDescription="@string/play_pause_button"
            android:src="@drawable/play" />

        <ImageView
            style="@style/MusicControlImage"
            android:layout_marginEnd="@dimen/bottom_bar_padding"
            android:layout_marginRight="@dimen/bottom_bar_padding"
            android:contentDescription="@string/skip_next_icon"
            android:src="@drawable/skip_next" />
    </LinearLayout>
</RelativeLayout>
